[package]
name = "bevy_wasm_threads"
version = "0.14.0-dev"
edition = "2021"
description = "Utilities to assist multithreaded web Bevy"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]

[dependencies]
send_wrapper = "0.6.0"
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [
    "Worker",
    "DedicatedWorkerGlobalScope",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
] }
bevy_utils = { path = "../bevy_utils", version = "0.14.0-dev" }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true
