[package]
name = "bevy_winit_offscreen"
version = "0.14.0-dev"
edition = "2021"
description = "A wrapper around Winit to facilitate offscreen canvas use."
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]

[dependencies]
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
send_wrapper = "0.6.0"
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [
    "Worker",
    "DedicatedWorkerGlobalScope",
    "WorkerOptions",
    "WorkerType",
    "OffscreenCanvas",
] }
bevy_wasm_threads = { path = "../bevy_wasm_threads", version = "0.14.0-dev" }
bevy_utils = { path = "../bevy_utils", version = "0.14.0-dev" }

[dev-dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true
